Upgraded HW1 Android Added switching application themes

--- a/Android/HW1/app/src/main/res/values/strings.xml
+++ b/Android/HW1/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HW1</string>
+    <string name="person">Мухин Дмитрий Владимирович БПИ228</string>
 </resources>
