Completed HW7 Android

--- a/Android/HW7/app/src/main/res/values/strings.xml
+++ b/Android/HW7/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HW7</string>
     <string name="person">Мухин Дмитрий Владимирович БПИ228</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="maps_button">Открыть карту</string>
+    <string name="back_button">Назад на главную</string>
 </resources>
