--- a/Android/Project/app/src/main/res/values/strings.xml
+++ b/Android/Project/app/src/main/res/values/strings.xml
@@ -6,4 +6,24 @@
     <string name="session_record_text">Рекорд за эту сессию</string>
     <string name="record_text">Рекорд</string>
     <string name="start_time">00:00:00</string>
+    <string name="title_activity_settings">Настройки</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="settings">Настройки</string>
+    <string name="enable_notifications">Отправлять уведомление о достижении рекорда\n</string>
+    <string name="notifications">Уведомления</string>
+    <string name="records">Рекорд</string>
 </resources>
